--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "0.22.0",
+    "cheerio": "^0.22.0",
     "mysql": "2.10.2",
-    "request": "2.81.0"
+    "request": "^2.81.0"
   }
 }
